@@ -1,5 +1,11 @@
 2010-05-11  Noel O'Boyle
 
+	* scripts/CMakeLists.txt, openbabel-java.i, openbabel-python.i: Bring
+	the Java bindings back to life. Bring the python and java SWIG
+	interface files into synch.
+
+2010-05-11  Noel O'Boyle
+
 	* windows-vc2008/libs, x64_default_build.bat: Adding libraries and
 	cmake bat for x64 build. Move i386 libraries to libs/i386 to keep
 	things symmetrical.
